// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridColumnPosition renders 0 1`] = `
Array [
  .c0 {
  grid-column-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders function 1`] = `
Array [
  .c0 {
  grid-column-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-column-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders negative number 1`] = `
Array [
  .c0 {
  grid-column-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-column-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-column-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-column-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-column-position: July;
}

@media May {
  .c0 {
    grid-column-position: August;
  }
}

@media April {
  .c0 {
    grid-column-position: September;
  }
}

@media January {
  .c0 {
    grid-column-position: November;
  }
}

@media April {
  .c0 {
    grid-column-position: August;
  }
}

@media June {
  .c0 {
    grid-column-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: July;
}

@media May {
  .c0 {
    grid-column-position: August;
  }
}

@media April {
  .c0 {
    grid-column-position: September;
  }
}

@media January {
  .c0 {
    grid-column-position: November;
  }
}

@media April {
  .c0 {
    grid-column-position: August;
  }
}

@media June {
  .c0 {
    grid-column-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-position: November;
  }
}

@media April {
  .c0 {
    grid-column-position: January;
  }
}

@media January {
  .c0 {
    grid-column-position: December;
  }
}

@media April {
  .c0 {
    grid-column-position: April;
  }
}

@media June {
  .c0 {
    grid-column-position: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-position: November;
  }
}

@media April {
  .c0 {
    grid-column-position: January;
  }
}

@media January {
  .c0 {
    grid-column-position: December;
  }
}

@media April {
  .c0 {
    grid-column-position: April;
  }
}

@media June {
  .c0 {
    grid-column-position: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-column-position: July;
  }
}

@media April {
  .c0 {
    grid-column-position: August;
  }
}

@media January {
  .c0 {
    grid-column-position: September;
  }
}

@media April {
  .c0 {
    grid-column-position: November;
  }
}

@media June {
  .c0 {
    grid-column-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-column-position: July;
  }
}

@media April {
  .c0 {
    grid-column-position: August;
  }
}

@media January {
  .c0 {
    grid-column-position: September;
  }
}

@media April {
  .c0 {
    grid-column-position: November;
  }
}

@media June {
  .c0 {
    grid-column-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-position: January;
  }
}

@media April {
  .c0 {
    grid-column-position: December;
  }
}

@media January {
  .c0 {
    grid-column-position: April;
  }
}

@media April {
  .c0 {
    grid-column-position: May;
  }
}

@media June {
  .c0 {
    grid-column-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-position: January;
  }
}

@media April {
  .c0 {
    grid-column-position: December;
  }
}

@media January {
  .c0 {
    grid-column-position: April;
  }
}

@media April {
  .c0 {
    grid-column-position: May;
  }
}

@media June {
  .c0 {
    grid-column-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders postitive number 1`] = `
Array [
  .c0 {
  grid-column-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders string 1`] = `
Array [
  .c0 {
  grid-column-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnPosition renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridColumnPosition renders valid theme path 1`] = `
Array [
  .c0 {
  grid-column-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
